--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@reduxjs/toolkit": "^2.8.2",
+    "antd": "^5.12.8",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.8.1",
-    "antd": "^5.12.8",
-    "@ant-design/icons": "^5.2.6",
-    "axios": "^1.6.2",
-    "zustand": "^4.4.7",
-    "dayjs": "^1.11.10",
-    "lodash-es": "^4.17.21"
+    "redux-persist": "^6.0.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/lodash-es": "^4.17.12",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -33,4 +36,4 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
-} 
+}
