--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^2.8.2",
+    "ahooks": "^3.9.6",
     "antd": "^5.12.8",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
